--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <h1>bbbbb</h1>
+    
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
@@ -49,7 +49,7 @@
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
                     <small class="fa fa-map-marker-alt text-primary me-2"></small>
-                    <small>United CIIGMA Hospitals, Chh. Sambajinagar Nagpur</small>
+                    <small>United CIIGMA Hospitals, Chh. Sambajinagar Aurangabad</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center py-3">
                     <small class="far fa-clock text-primary me-2"></small>
@@ -525,7 +525,7 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3">United CIIGMA Hospitals, Chh. Sambajinagar Nagpur</i></p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3">United CIIGMA Hospitals, Chh. Sambajinagar Aurangabad</i></p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+0240 667 6666</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                     <div class="d-flex pt-2">
