--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
         </div>
     </div> -->
     <!-- Testimonial End -->
-   <!-- Contact Start -->
+    <!-- Contact Start -->
     <div class="container-xxl py-5" id="Contact">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
@@ -555,7 +555,7 @@
                         </div>
                         <div class="ms-4">
                             <p class="mb-2">Address</p>
-                            <h5 class="mb-0">123 Street, New York, USA</h5>
+                            <h5 class="mb-0">Dr Paayal's Shree hospital Sindhi Colony, Aurangabad, Maharashtra 431005</h5>
                         </div>
                     </div>
                 </div>
@@ -566,7 +566,7 @@
                         </div>
                         <div class="ms-4">
                             <p class="mb-2">Call Us Now</p>
-                            <h5 class="mb-0">+012 345 6789</h5>
+                            <h5 class="mb-0">+093706 58855</h5>
                         </div>
                     </div>
                 </div>
@@ -577,7 +577,7 @@
                         </div>
                         <div class="ms-4">
                             <p class="mb-2">Mail Us Now</p>
-                            <h5 class="mb-0">info@example.com</h5>
+                            <h5 class="mb-0">drchobepaayal@gmail.com</h5>
                         </div>
                     </div>
                 </div>
@@ -585,7 +585,7 @@
                     <div class="bg-light rounded p-5">
                         <p class="d-inline-block border rounded-pill py-1 px-4">Contact Us</p>
                         <h1 class="mb-4">Have Any Query? Please Contact Us!</h1>
-                        <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                        <p class="mb-4">Feel free to reach out to us for any inquiries or appointments. You can contact us !</a>.</p>
                         <form>
                             <div class="row g-3">
                                 <div class="col-md-6">
@@ -621,10 +621,9 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <div class="h-100" style="min-height: 400px;">
-                        <iframe class="rounded w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                        frameborder="0" allowfullscreen="" aria-hidden="false"
-                        tabindex="0"></iframe>
+                        
+                        <iframe  class="rounded w-100 h-100" src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d120073.47194013766!2d75.25432960169188!3d19.86971935943743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x3bdb987992cdb4a9%3A0xf20369828fa9c04d!2sDr%20Paayal&#39;s%20Shree%20hospital%20Manik%20Arcade%2C%20above%20Patanjali%20Corner%2C%20Kalda%20Corner%2C%20Chetana%20Nagar%2C%20Sindhi%20Colony%2C%20Aurangabad%2C%20Maharashtra%20431005!3m2!1d19.869738299999998!2d75.3367313!5e0!3m2!1sen!2sin!4v1713955268694!5m2!1sen!2sin"  style="border:1px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        
                     </div>
                 </div>
             </div>
@@ -640,35 +639,36 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3">United CIIGMA Hospitals, Chh. Sambajinagar Aurangabad</i></p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+0240 667 6666</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3">Dr Paayal's Shree hospital Manik Arcade, above Patanjali Corner, Kalda Corner, Chetana Nagar, Sindhi Colony, Aurangabad, Maharashtra 431005</i></p>
+                   <a href="tel:093706 58855"style="color:#fff"> <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>093706 58855</p></a>
+</p>
+                  <a href="mailto:drchobepaayal@gmail.com" style="color:#fff">  <p class="mb-2"><i class="fa fa-envelope me-3"></i>drchobepaayal@gmail.com</p></a>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social rounded-circle" href="https://www.facebook.com/paayal.chobe"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social rounded-circle" href="https://www.youtube.com/channel/UCNu4cXKXkK1D6p3zPv9182Q/about"><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-outline-light btn-social rounded-circle" href="https://www.instagram.com/dr.paayalchobe/"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Services</h5>
-                    <a class="btn btn-link" href="">Cardiology</a>
-                    <a class="btn btn-link" href="">Pulmonary</a>
-                    <a class="btn btn-link" href="">Neurology</a>
-                    <a class="btn btn-link" href="">Orthopedics</a>
-                    <a class="btn btn-link" href="">Laboratory</a>
+                    <a class="btn btn-link" href="">Pathology Laboratory</a>
+                    <a class="btn btn-link" href="">PCOD Clinic</a>
+                    <a class="btn btn-link" href="">Antenatal checkups</a>
+                    <a class="btn btn-link" href="">IVF Consultant</a>
+                    <a class="btn btn-link" href="">Gynecology services</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
+                    <a class="btn btn-link" href="#about">About Us</a>
+                    <a class="btn btn-link" href="#Contact">Contact Us</a>
+                    <a class="btn btn-link" href="#Service">Our Services</a>
+                    <a class="btn btn-link" href="#">Terms & Condition</a>
+                    <a class="btn btn-link" href="#">Support</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Newsletter</h5>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <p>Contact Us-.</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
@@ -680,11 +680,10 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="#">TBI</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                        Designed By <a class="border-bottom" href="https://htmlcodex.com">TBI</a>
                     </div>
                 </div>
             </div>
@@ -712,6 +711,5 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
-
 
 </html>
