--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
     <!-- Team Start -->
     <div class="container-xxl py-5">
         <div class="container">
+            <hr style="color:#03a9e7">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <p class="d-inline-block border rounded-pill py-1 px-4">Doctors</p>
                 <h1>Our Doctors</h1>
