--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     </div>
     <!-- Service End -->
 
-<hr>
+
     <!-- Feature Start -->
    <!--  <div class="container-fluid bg-primary overflow-hidden my-5 px-lg-0">
         <div class="container feature px-lg-0">
@@ -362,7 +362,7 @@
     </div> -->
     <!-- Feature End -->
 
-
+<hr style="color:#03a9e7">
     <!-- Team Start -->
     <div class="container-xxl py-5">
         <div class="container">
@@ -408,7 +408,7 @@
     </div>
     <!-- Team End -->
 
-
+<hr style="color:#03a9e7">
     <!-- Appointment Start -->
     <div class="container-xxl py-5" id="Appointment">
         <div class="container">
@@ -484,7 +484,7 @@
         </div>
     </div>
     <!-- Appointment End -->
-
+<hr style="color:#03a9e7">
 
     <!-- Testimonial Start -->
     <!-- <div class="container-xxl py-5">
