--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
         p{
             text-align:justify;
         }
+        @media only screen and (max-width: 768px){ 
+      
+  
+ 
+  overflow: hidden;
+}
     </style>
 </head>
 
