--- a/index.html
+++ b/index.html
@@ -34,12 +34,20 @@
         p{
             text-align:justify;
         }
-        @media only screen and (max-width: 768px){ 
-      
-  
- 
-  overflow: hidden;
+       @media only screen and (max-width: 768px){
+
+html,
+
+body{
+
+width:100%;
+
+overflow-x:auto;
+!important;
 }
+
+}
+
     </style>
 </head>
 
