--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ overflow-x:auto;
     <!-- Topbar Start -->
     <div class="container-fluid bg-light p-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="row gx-0 d-none d-lg-flex">
-            <div class="col-lg-7 px-5 text-start">
+            <div class="col-lg-7 col-md-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
                     <small class="fa fa-map-marker-alt text-primary me-2"></small>
                     <small>Dr Paayal's Shree hospital Sindhi Colony, Aurangabad, Maharashtra 431005</small>
@@ -75,7 +75,7 @@ overflow-x:auto;
                     <small>Mon - Fri : 09.00 AM - 09.00 PM</small>
                 </div>
             </div>
-            <div class="col-lg-5 px-5 text-end">
+            <div class="col-lg-5 col-md-5 px-5 text-end">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
                     <small class="fa fa-phone-alt text-primary me-2"></small>
                     <a href="tel:093706 58855"> <small>+093706 58855
@@ -121,11 +121,11 @@ overflow-x:auto;
     <!-- Header Start -->
     <div class="container-fluid header bg-primary p-0 mb-5">
         <div class="row g-0 align-items-center flex-column-reverse flex-lg-row">
-            <div class="col-lg-6 p-5 wow fadeIn" data-wow-delay="0.1s">
+            <div class="col-lg-6  col-md-6 p-5 wow fadeIn" data-wow-delay="0.1s">
                 <h1 class="display-4 text-white mb-5">Best Gynaecologist in Aurangabad</h1>
                 <p style="color:#fff;">Dr. Paayal Kandharkar Chobe is a dedicated and skilled gynecologist with extensive experience in the field. With a background in MD and specialized training in gynecological laparoscopy, she is committed to providing compassionate and personalized care to her patients. Dr. Chobe's expertise in infertility treatments and her commitment to staying updated with the latest advancements make her a trusted healthcare provider for couples seeking fertility solutions.</p>
             </div>
-            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+            <div class="col-lg-6 col-md-6 wow fadeIn" data-wow-delay="0.5s">
                 <div class="owl-carousel header-carousel">
                     <div class="owl-carousel-item position-relative">
                         <img class="img-fluid" src="img/carousel-1.jpg" alt="">
@@ -156,13 +156,13 @@ overflow-x:auto;
     <div class="container-xxl py-5" id="About">
         <div class="container">
             <div class="row g-5">
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+                <div class="col-lg-6 col-md-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="d-flex flex-column">
                         <img class="img-fluid rounded w-75 align-self-end" src="img/about-1.jpg" alt="">
                         <img class="img-fluid rounded w-50 bg-white pt-3 pe-3" src="img/about-2.jpg" alt="" style="margin-top: -25%;">
                     </div>
                 </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                <div class="col-lg-6 col-md-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">About Us</p>
                     <h1 class="mb-4">Why You Should Trust Us? Get Know About Us!</h1>
                     <p>Dr. Paayal Kandharkar Chobe has completed her MD in 2004. She has done the Fellowship Gynec Lap in 2004-2005 and Diploma in Gynec Laparoscopy in 2006 from Germany. She has the Advanced Training in IVF/Infertility course FOGSI recognized training in 2016</p>
@@ -544,7 +544,7 @@ overflow-x:auto;
                 <h1>Contact Us</h1>
             </div>
             <div class="row g-4">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-4">
                     <div class="h-100 bg-light rounded d-flex align-items-center p-5">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;">
                             <i class="fa fa-map-marker-alt text-primary"></i>
@@ -555,7 +555,7 @@ overflow-x:auto;
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-4">
                     <div class="h-100 bg-light rounded d-flex align-items-center p-5">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;">
                             <i class="fa fa-phone-alt text-primary"></i>
@@ -566,7 +566,7 @@ overflow-x:auto;
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-4">
                     <div class="h-100 bg-light rounded d-flex align-items-center p-5">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;">
                             <i class="fa fa-envelope-open text-primary"></i>
@@ -615,7 +615,7 @@ overflow-x:auto;
                         </form>
                     </div>
                 </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                <div class="col-lg-6 col-md-6 wow fadeIn" data-wow-delay="0.5s">
                     <div class="h-100" style="min-height: 400px;">
                         
                         <iframe  class="rounded w-100 h-100" src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d120073.47194013766!2d75.25432960169188!3d19.86971935943743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x3bdb987992cdb4a9%3A0xf20369828fa9c04d!2sDr%20Paayal&#39;s%20Shree%20hospital%20Manik%20Arcade%2C%20above%20Patanjali%20Corner%2C%20Kalda%20Corner%2C%20Chetana%20Nagar%2C%20Sindhi%20Colony%2C%20Aurangabad%2C%20Maharashtra%20431005!3m2!1d19.869738299999998!2d75.3367313!5e0!3m2!1sen!2sin!4v1713955268694!5m2!1sen!2sin"  style="border:1px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
