--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ overflow-x:auto;
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="#About" class="nav-item nav-link">About</a>
                 <a href="#Service" class="nav-item nav-link">Service</a>
+                <a href="#blog" class="nav-item nav-link">Blog</a>
                 
                  <a href="#Appointment" class="nav-item nav-link">Appointment</a>
                        
