--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ overflow-x:auto;
     <div class="container-fluid header bg-primary p-0 mb-5">
         <div class="row g-0 align-items-center flex-column-reverse flex-lg-row">
             <div class="col-lg-6  col-md-6 p-5 wow fadeIn" data-wow-delay="0.1s">
-                <h1 class="display-4 text-white mb-5">Best Gynaecologist in Aurangabad</h1>
+                <h1 class="display-4 text-white mb-5">The top gynecologist in Aurangabad</h1>
                 <p style="color:#fff;">Dr. Paayal Kandharkar Chobe is a dedicated and skilled gynecologist with extensive experience in the field. With a background in MD and specialized training in gynecological laparoscopy, she is committed to providing compassionate and personalized care to her patients. Dr. Chobe's expertise in infertility treatments and her commitment to staying updated with the latest advancements make her a trusted healthcare provider for couples seeking fertility solutions.</p>
             </div>
             <div class="col-lg-6 col-md-6 wow fadeIn" data-wow-delay="0.5s">
