--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@ overflow-x:auto;
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item bg-light rounded h-100 p-5">
                         <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;">
-                            <i class="fa fa-vials text-primary fs-4"></i> <span class="mb-3">Delivery and Postpartum Care</span>
+                            <i class="fa fa-vials text-primary fs-4"></i> 
                             <!-- <i class="fa fa-heartbeat text-primary fs-4"></i> -->
                         </div>
-                       
+                       <h4 class="mb-3">Delivery and Postpartum Care</h4>
                         <p class="mb-4">Delivery and postpartum care involve the process of childbirth and the care provided to mothers and newborns immediately after birth, including monitoring for complications and providing support for recovery.</p>
                         
                     </div>
